--- a/3.可见格式化模型/1.盒子的大小.html
+++ b/3.可见格式化模型/1.盒子的大小.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <!-- 
-        上下方位的内外边距，仍然 基于包含快的宽度来计算
+        上下方位的内外边距，仍然 基于包含块的宽度来计算
      -->
     <style>
         .group{
