--- a/10.变换，过渡与动画/变换/5.缩放和变形.html
+++ b/10.变换，过渡与动画/变换/5.缩放和变形.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <!-- 
+        1.缩放
+            transform:scale(2) 一个参数表示水平和垂直方向缩放。
+             transform:scale(2,3)                   两个参数表示水平和垂直方向分别缩放
+        2.变形
+            角度为正，为当前轴负方向斜切;角度为负，为当前轴正方向斜切。
+
+            transform:skew(15deg) 一个参数表示水平方向的倾斜角度
+             transform:skew(15deg,15deg)  两个参数表示分别表示水平和垂直方向的角度
+            X轴变形：水平线在元素变形后仍然保持水平，而垂直线发生倾斜。
+     -->
     <style>
         body {
             font-family: Baskerville, Times, Times New Roman, serif;
@@ -30,10 +41,18 @@
             line-height: 1.5;
             min-height: 1.75em;
             max-width: 35em;
-            border-left: 1.5em solid #777;
+            border-left: 1.5em solid #aa031c;
             padding-left: .5em;
             position: relative;
-            margin-bottom: .5em;
+            -webkit-transform: skewX(15deg);
+            -moz-transform: skewX(15deg);
+            -ms-transform: skewX(15deg);
+            -o-transform: skewX(15deg);
+            transform: skewX(15deg);
+            background-color: #e5212e;
+            padding: 1em;
+            height: 2em;
+            color: #fff;
         }
 
         .rules li::before {
@@ -42,7 +61,7 @@
             left: 0;
             padding-right: .25em;
             display: block;
-            color: #fff;
+            color: #fd858a;
             line-height: 1.5em;
             padding-left: .25em;
             content: '$ 'counter(rulecount);
@@ -57,6 +76,16 @@
             -o-transform: translate(-100%, -100%) rotate(-90deg);
             transform: translate(-100%, -100%) rotate(-90deg);
         }
+
+        .rules li:nth-child(even) {
+            background-color: #aa031c;
+            border-color: #6b0011;
+            -webkit-transform: skewX(-15deg);
+            -moz-transform: skewX(-15deg);
+            -ms-transform: skewX(-15deg);
+            -o-transform: skewX(-15deg);
+            transform: skewX(-15deg);
+        }
     </style>
 </head>
 
@@ -70,5 +99,3 @@
         <li>“壮丽70年·奋斗新时代”大型主题采访活动全面启动</li>
     </ol>
 </body>
-
-</html>
