--- a/1.基础知识/1.ID和Class属性.html
+++ b/1.基础知识/1.ID和Class属性.html
@@ -13,7 +13,7 @@
   <body>
     <!-- 
         product-list,给元素命名，最好使用组件的类型，而不是视觉效果命名。
-        primary-product-list,标识了ul是独特的，id属性一般用来唯一标识该元素，一般不添加额外属性
+        primary-product-list,标识了ul是独特的，id属性一般用来唯一标识该元素，一般不添加额外属性。
        -->
     <ul class="product-list" id="primary-product-list">
       <li>Product 1</li>
